changed navbar to follow window location to prevent gap between header and sidebar.

--- a/src/App.css
+++ b/src/App.css
@@ -39,4 +39,5 @@
 
 html, body{
   background-color: #DCDCDC;
+  padding-top: 5vh;
 }
